styles/layout.scss
@import 'vars.scss';

.layout {
    display: block;

    .skip-link {
        position: absolute;
        left: -9999px;
        top: auto;
        width: 1px;
        height: 1px;
        overflow: hidden;
        z-index: 100;
        padding: 0.5rem 1rem;
        background: var(--gray-12);
        color: var(--gray-1);
        text-decoration: none;
        font-size: 0.875rem;

        &:focus {
            position: fixed;
            top: 0;
            left: 0;
            width: auto;
            height: auto;
            overflow: visible;
        }
    }

    .header {
        display: flex;
        flex-direction: column;

        @media (max-width: $tabletMax) {
            padding: 0;
        }

        .marquee {
            display: flex;
            justify-content: space-between;
            width: 100%;
            padding: $s-x-large 0;

            @media (max-width: $tabletMax) {
                display: block;
                padding: 0 $s-large;
                position: relative;
            }
        }

        .nav {
            width: 100%;

            @media (max-width: $tabletMax) {
                padding: 0;
                z-index: 10;
            }
        }
    }

    .content {
        display: grid;
        grid-template-columns: [left] minmax(450px, 35%) [menu-end] auto [content-end];
        grid-gap: $s-large;
        grid-template-areas:
            "menu details";

        @media(max-width: $tabletMax) {
            display: block;
            width: 100%;
            padding: 0 $s-large;
        }

        .menu {
            grid-area: menu;

            @media(max-width: $tabletMax) {
                display: none;
            }
        }

        .projectDetails {
            grid-area: details;
            display: flex;
            flex-direction: column;
            padding-right: $s-x-large;

            @media(max-width: $tabletMax) {
                padding-right: 0;
            }

            &.desktopDetailOnly {
                @media (max-width: $tabletMax) {
                    display: none;
                }
            }
        }

        .aboutPage {
            display: flex;
            flex-direction: column;
            align-items: center;
            padding: $s-x-large;

            @media (max-width: $tabletMax) {
                padding: $s-large;
            }
        }
    }

    .contentCards {
        display: block;
        padding: $s-x-large;
        max-width: 1200px;
    }

    .singleColumn {
        display: block;
        max-width: 640px;
        padding: $s-x-large;

        @media (max-width: $tabletMax) {
            max-width: 100%;
            padding: $s-large;
        }
    }
}

